# llcfg

./: CHANGELOG.md  README.md  cabal.project  llcfg.cabal
src/: Concrete.hs
test/: Main.hs
